fixed header padding on small devices

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -235,6 +235,9 @@ footer {
     width: 100%;
     border: none;
   }
+  header {
+    padding: 1.5rem;
+  }
   #add-blog {
     width: 100%;
     margin: 0;
